syntax = "proto3";

package proto;

option go_package = "./services/user-service/pb";

import "google/protobuf/Empty.proto";
import "services/user-service/proto/entity.proto";

service ProductService {
  rpc FindAllByAdmin(google.protobuf.Empty) returns (ListProductResponse);
  rpc FindAll(GetProductByFiltersRequest) returns (ListProductResponse);
  rpc FindAllBySimilarCategory(GetProductByProductCodeRequest) returns (ListProductResponse);
  rpc FindAllRecommendation(GetProductByProductCodeRequest) returns (ListProductRecommendationResponse);
  rpc FindByCode(GetProductByProductCodeRequest) returns (GetProductResponse);
  rpc FindByName(GetProductByProductNameRequest) returns (GetProductResponse);
  rpc Create(CreateProductRequest) returns (GetProductResponse);
  rpc Update(UpdateProductRequest) returns (GetProductResponse);
  rpc Delete(GetProductByProductCodeRequest) returns (google.protobuf.Empty);
}

message ListProductRecommendationResponse {
  repeated ProductRecommendation ProductRecommendation = 1;
}

message ListProductResponse {
  repeated Product Product = 1;
}

message GetProductResponse {
  Product Product = 1;
}

message GetProductByProductCodeRequest {
  string Code = 1;
}

message GetProductByProductNameRequest {
  string Name = 1;
}

message GetProductByFiltersRequest {
  string Search = 1;
  string Category = 2;
}

message CreateProductRequest {
  string Code = 1;
  string Name = 2;
  string Description = 3;
  int32 Price = 4;
  string Category = 5;
  int32 Mass = 6;
  string Image = 7;
}

message UpdateProductRequest {
  string Code = 1;
  string Name = 2;
  string Description = 3;
  int32 Price = 4;
  string Category = 5;
  bool IsEmpty = 6;
  int32 Mass = 7;
  string Image = 8;
}

